<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.dbpedia</groupId>
    <artifactId>quad-processor-util</artifactId>
    <version>0.1-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.8</java.version>
        <scala.version>2.11.4</scala.version>
        <scalatest.scala.version>2.11</scalatest.scala.version>
        <scalatest.version>2.2.1</scalatest.version>
        <solr.version>5.3.0</solr.version>
    </properties>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>net.alchim31.maven</groupId>
                    <artifactId>scala-maven-plugin</artifactId>
                    <version>3.2.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.1</version>
                    <configuration>
                        <source>1.8</source>
                        <target>1.8</target>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>

                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                </executions>

                <configuration>
                    <launchers>
                        <launcher>
                            <id>sort-quads</id>
                            <mainClass>org.dbpedia.quad.sort.QuadSorter</mainClass>
                            <args>
                                <arg>quad-sorter.properties</arg>
                            </args>
                            <jvmArgs>
                                <jvmArg>-server</jvmArg>
                                <jvmArg>-Xmx8G</jvmArg>
                                <jvmArg>-Xms4G</jvmArg>
                                <jvmArg>-XX:+HeapDumpOnOutOfMemoryError</jvmArg>
                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
                                <jvmArg>-XX:-UseGCOverheadLimit</jvmArg>
                            </jvmArgs>
                        </launcher>

                        <launcher>
                            <id>split-quad-file</id>
                            <mainClass>org.dbpedia.quad.scripts.DumpSplitter</mainClass>
                            <args>
                                <arg>dump-splitter.properties</arg>
                            </args>
                            <jvmArgs>
                                <jvmArg>-server</jvmArg>
                                <jvmArg>-Xmx8G</jvmArg>
                                <jvmArg>-Xms4G</jvmArg>
                                <jvmArg>-XX:+HeapDumpOnOutOfMemoryError</jvmArg>
                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
                                <jvmArg>-XX:-UseGCOverheadLimit</jvmArg>
                            </jvmArgs>
                        </launcher>
                        <launcher>
                            <id>solr-loader</id>
                            <mainClass>org.dbpedia.quad.solr.SolrLoader</mainClass>
                            <args>
                                <arg>/home/mf/solr</arg>
                                <arg>en</arg>
                                <arg>""</arg>
                                <arg>"_en.ttl.bz2"</arg>
                                <arg>http://vmdbpedia.informatik.uni-leipzig.de:10983/solr/dbpedia</arg>
                                <arg>page_ids_sorted</arg>
                                <arg>pagerank_sorted,short_abstracts_sorted,article_categories_sorted,interlanguage_links_sorted,mappingbased_literals_sorted,infobox_properties_sorted,labels_sorted,instance_types_sorted</arg>
                            </args>
                            <jvmArgs>
                                <jvmArg>-server</jvmArg>
                                <jvmArg>-Xmx8G</jvmArg>
                                <jvmArg>-Xms4G</jvmArg>
                                <jvmArg>-XX:+HeapDumpOnOutOfMemoryError</jvmArg>
                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
                                <jvmArg>-XX:-UseGCOverheadLimit</jvmArg>
                            </jvmArgs>
                        </launcher>
                    </launchers>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-library</artifactId>
            <version>${scala.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-compress</artifactId>
            <version>1.4.1</version>
            <exclusions>
                <exclusion>
                    <groupId>org.tukaani</groupId>
                    <artifactId>xz</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.5</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
            <version>4.0</version>
        </dependency>

        <dependency>
            <groupId>org.apache.solr</groupId>
            <artifactId>solr-core</artifactId>
            <version>${solr.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.solr</groupId>
            <artifactId>solr-solrj</artifactId>
            <version>${solr.version}</version>
        </dependency>

        <dependency>
            <groupId>org.scalatest</groupId>
            <artifactId>scalatest_2.11</artifactId>
            <version>${scalatest.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.jena</groupId>
            <artifactId>apache-jena-libs</artifactId>
            <type>pom</type>
            <version>3.1.0</version>
        </dependency>
    </dependencies>
</project>